# feature-rank

./: .editorconfig  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PROMPT_HISTORY.md  README.md  SECURITY.md  SUPPORT.md  docker-compose.prod.yml  docker-compose.yml
.github/: dependabot.yml
backend/: .dockerignore  Dockerfile  conftest.py  coverage.json  entrypoint.sh  pyproject.toml
backend/apps/categories/: admin.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/categories/migrations/: 0001_initial.py  0002_category_description_is_active.py
backend/apps/categories/tests/: test_models.py  test_selectors.py  test_serializers.py  test_services.py  test_views.py
backend/apps/feature_requests/: admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/feature_requests/management/commands/: seed_demo_data.py  seed_features.py  seed_reference_data.py
backend/apps/feature_requests/migrations/: 0001_initial.py
backend/apps/feature_requests/tests/: test_models.py  test_permissions.py  test_selectors.py  test_serializers.py  test_services.py  test_views.py
backend/apps/roles/: admin.py  models.py  permissions.py  selectors.py  serializers.py  services.py  views.py
backend/apps/roles/migrations/: 0001_initial.py
backend/apps/roles/tests/: test_models.py
backend/apps/statuses/: admin.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/statuses/migrations/: 0001_initial.py  0002_status_description_is_active.py
backend/apps/statuses/tests/: test_models.py  test_selectors.py  test_serializers.py  test_services.py  test_views.py
backend/apps/users/: admin.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_user_avatar_url.py
backend/apps/users/tests/: test_permissions.py  test_selectors.py  test_serializers.py  test_services.py  test_views.py
backend/config/: asgi.py  auth_views.py  drf_exception_handler.py  drf_renderer.py  pagination.py  urls.py  views.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py  test.py
backend/tests/: test_auth.py  test_exception_handler.py  test_health.py  test_pagination.py
deploy/: feature-rank.service
(+193 files in other folders)
