[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-rank-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15,<4.0",
    "django-cors-headers>=4.3,<5.0",
    "mysqlclient>=2.2,<3.0",
    "dj-database-url>=2.1,<3.0",
    "gunicorn>=22.0,<23.0",
    "python-decouple>=3.8,<4.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "whitenoise>=6.6,<7.0",
    "drf-spectacular>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff==0.5.7",
    "black==24.8.0",
    "factory-boy>=3.3",
]

[tool.setuptools.packages.find]
include = ["apps*", "config*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["apps", "tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501", "F401"]
"manage.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]
